--- a/_sandbox/Makefile
+++ b/_sandbox/Makefile
@@ -11,7 +11,7 @@ router.out: router.fix ../lib/simple_parser.fix ../lib/string_ex.fix ../lib/net/
 
 #router: router.fix ../lib/simple_parser.fix ../lib/string_ex.fix ../lib/net/url.fix
 router: router.fix ../lib/string_ex.fix
-	fix run -g -f $^
+	fix run -f $^
 
 clean:
 	rm -f *.out
