--- a/_sandbox/Makefile
+++ b/_sandbox/Makefile
@@ -6,8 +6,11 @@ all: fib1.out fib2.out fib3.out fib4.out fib5.out fib6.out echo.out calc.out fix
 channel: channel.fix ../lib/string_ex.fix ../lib/net/io_ex.fix
 	fix run -f $^
 
-regexp: regexp.fix regexp_nfa.fix regexp_pattern.fix ../lib/simple_parser.fix ../lib/string_ex.fix
-	fix run -f $^
+calc3: calc3.fix ndarray.fix state_monad.fix ../lib/simple_parser.fix ../lib/string_ex.fix 
+	fix run -f $^ -d readline
+
+test_state_monad:
+	fix run -f state_monad_test.fix state_monad.fix $(LIB_UNIT_TEST)
 
 clean:
 	rm -f *.out
