--- a/_sandbox/Makefile
+++ b/_sandbox/Makefile
@@ -6,7 +6,10 @@ all: fib1.out fib2.out fib3.out fib4.out fib5.out fib6.out echo.out calc.out fix
 channel: channel.fix ../lib/string_ex.fix ../lib/net/io_ex.fix
 	fix run -f $^
 
-calc3: calc3.fix ndarray.fix state_monad.fix ../lib/simple_parser.fix ../lib/string_ex.fix 
+ndarray: ndarray_test.fix ndarray.fix ../lib/simple_parser.fix ../lib/string_ex.fix 
+	fix run -f $^
+
+ndarray_calc: ndarray_calc.fix ndarray.fix state_monad.fix ../lib/simple_parser.fix ../lib/string_ex.fix 
 	fix run -f $^ -d readline
 
 test_state_monad:
