--- a/_sandbox/Makefile
+++ b/_sandbox/Makefile
@@ -15,6 +15,9 @@ ndarray_calc: ndarray_calc.fix ndarray.fix state_monad.fix ../lib/simple_parser.
 build_ndarray_calc: ndarray_calc.fix ndarray.fix state_monad.fix ../lib/simple_parser.fix ../lib/string_ex.fix
 	fix build -f $^ -d readline
 
+png: png.fix ndarray.fix ../lib/io_ex.fix ../lib/string_ex.fix
+	fix run -f $^ -d png -d z
+
 test_state_monad:
 	fix run -f state_monad_test.fix state_monad.fix $(LIB_UNIT_TEST)
 
