Change Module Names (eg. StringEx => Minilib.Text.StringEx)

--- a/_sandbox/Makefile
+++ b/_sandbox/Makefile
@@ -3,7 +3,7 @@
 
 all: fib1.out fib2.out fib3.out fib4.out fib5.out fib6.out echo.out calc.out fix_func.out fork_exec.out
 
-channel: channel.fix ../lib/text/string_ex.fix ../lib/net/io_ex.fix
+channel: channel.fix ../lib/text/string_ex.fix ../lib/io/io_ex.fix ../lib/encoding/binary.fix
 	fix run -f $^
 
 ndarray: ndarray_test.fix ndarray.fix ../lib/text/simple_parser.fix ../lib/text/string_ex.fix 
