update github workflows

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -16,3 +16,6 @@ jobs:
 
     - name: Run tests
       run: docker run --rm -v .:/work -w /work pt9999/fix:latest make test
+
+    - name: Make examples
+      run: docker run --rm -v .:/work -w /work pt9999/fix:latest make examples
