--- a/_sandbox/Makefile
+++ b/_sandbox/Makefile
@@ -25,6 +25,9 @@ png.out:
 test_state_monad:
 	../bin/fixautolink run -L ../lib -f state_monad_test.fix state_monad.fix
 
+bigint:
+	../bin/fixautolink run -L ../lib -f bigint.fix
+
 clean:
 	rm -f *.out
 
