--- a/_sandbox/Makefile
+++ b/_sandbox/Makefile
@@ -25,8 +25,8 @@ png.out:
 test_state_monad:
 	../bin/fixautolink run -L ../lib -f state_monad_test.fix state_monad.fix
 
-bigint:
-	../bin/fixautolink build -L ../lib -f bigint.fix
+bigint_test1:
+	../bin/fixautolink build -L ../lib -f bigint_test1.fix
 
 clean:
 	rm -f *.out
