update github workflow

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -14,8 +14,5 @@ jobs:
     - name: List directory
       run: ls -l
 
-    - name: Run tests
-      run: docker run --rm -v .:/work -w /work pt9999/fix:latest make test
-
-    - name: Make examples
-      run: docker run --rm -v .:/work -w /work pt9999/fix:latest make examples
+    - name: Run tests and make examples
+      run: docker run --rm -v .:/work -w /work pt9999/fixlang_minilib_ci make test examples
