--- a/_sandbox/Makefile
+++ b/_sandbox/Makefile
@@ -28,6 +28,9 @@ test_state_monad:
 bigint_test1:
 	../bin/fixautolink build -L ../lib -f bigint_test1.fix
 
+bigfloat:
+	../bin/fixautolink run -L ../lib -f bigfloat.fix
+
 clean:
 	rm -f *.out
 
