--- a/_sandbox/Makefile
+++ b/_sandbox/Makefile
@@ -34,6 +34,9 @@ bigint_test1:
 bigfloat_test1:
 	../bin/fixautolink build -L ../lib -L . -f bigfloat_test1.fix
 
+algebra1:
+	../bin/fixautolink run -L ../lib -L . -f algebra1.fix
+
 clean:
 	rm -f *.out
 
