change gh workflow (add --pull always)

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -15,4 +15,4 @@ jobs:
       run: ls -la
 
     - name: Run tests and make examples
-      run: docker run --rm -v .:/work -w /work pt9999/fixlang_minilib_ci make test examples
+      run: docker run --pull always --rm -v .:/work -w /work pt9999/fixlang_minilib_ci make test examples
