Algebra support (part 2) (#17)
* move ring, euclid, modular, polynomial to lib/math

* update README.md

* add tests, refactor

* add modular_test.fix (wip)

* update modular_test.fix

* add polynomial_test.fix (wip)

* update polynomial_test

* add random_ex.fix

* update polynomial_test (use Random State monad)

* update polynomial_test

* update polynomial_test

* move back state_ex.fix to _sandbox, add simple state monad instead

because StateIO and StateIOF can be replaced with `AsyncTask::Var`.

* update document

* update document

* update README.md

--- a/_sandbox/Makefile
+++ b/_sandbox/Makefile
@@ -49,8 +49,8 @@ bigint_test1:
 bigfloat_test1:
 	../bin/fixautolink build -L ../lib -L . -f bigfloat_test1.fix
 
-algebra1:
-	../bin/fixautolink run -L ../lib -L . -f algebra1.fix
+algebra_test1:
+	../bin/fixautolink run -L ../lib -L . -f algebra_test1.fix
 
 monoid_test1:
 	../bin/fixautolink run -L ../lib -L . -f monoid_test1.fix
