rename svg1.fix to svg_test1.fix (wip)

--- a/_sandbox/Makefile
+++ b/_sandbox/Makefile
@@ -61,6 +61,9 @@ monoid_test1:
 xml_test1:
 	../bin/fixautolink run -L ../lib -L . -f xml_test1.fix -O minimum
 
+svg_test1:
+	../bin/fixautolink run -L ../lib -L . -f svg_test1.fix -O minimum
+
 clean:
 	rm -f *.out
 
