split aes.fix and aes_test1.fix

--- a/_sandbox/Makefile
+++ b/_sandbox/Makefile
@@ -43,8 +43,8 @@ state_monad_test2:
 reader_writer_test:
 	../bin/fixautolink run -L ../lib -f reader_writer_test.fix
 
-aes:
-	../bin/fixautolink run -L ../lib -f aes.fix
+aes_test1:
+	../bin/fixautolink run -L ../lib -L . -f aes_test1.fix
 
 lnum:
 	../bin/fixautolink build -L ../lib -f lnum.fix
