--- a/_sandbox/Makefile
+++ b/_sandbox/Makefile
@@ -38,7 +38,7 @@ state_monad_test:
 	../bin/fixautolink run -L ../lib -f state_monad_test.fix
 
 state_monad_test2:
-	../bin/fixautolink run -L ../lib -f state_monad_test2.fix
+	../bin/fixautolink run -L ../lib -L . -f state_monad_test2.fix -O minimum
 
 reader_writer_test:
 	../bin/fixautolink run -L ../lib -f reader_writer_test.fix
