aes_gcm: update (wip)

--- a/_sandbox/Makefile
+++ b/_sandbox/Makefile
@@ -52,6 +52,9 @@ secure_random:
 aes_test1:
 	../bin/fixautolink run -L ../lib -L . -f aes_test1.fix
 
+aes_gcm:
+	../bin/fixautolink run -L ../lib -L . -f aes_gcm.fix -O separated
+
 lnum:
 	../bin/fixautolink build -L ../lib -f lnum.fix
 
