aes: try to optimize, but not so fast

--- a/_sandbox/Makefile
+++ b/_sandbox/Makefile
@@ -53,7 +53,7 @@ aes_test1:
 	../bin/fixautolink run -L ../lib -L . -f aes_test1.fix
 
 aes_gcm_test1:
-	../bin/fixautolink run -L ../lib -L . -f aes_gcm_test1.fix -O default
+	../bin/fixautolink build -L ../lib -L . -f aes_gcm_test1.fix -O default
 
 lnum:
 	../bin/fixautolink build -L ../lib -f lnum.fix
