--- a/_sandbox/Makefile
+++ b/_sandbox/Makefile
@@ -46,8 +46,8 @@ reader_writer_test:
 cipher_test1:
 	../bin/fixautolink run -L ../lib -L . -f cipher_test1.fix -O minimum
 
-secure_random:
-	../bin/fixautolink run -L ../lib -L . -f secure_random.fix -O minimum
+secure_random_test1:
+	../bin/fixautolink run -L ../lib -L . -f secure_random_test1.fix -O separated
 
 aes_test1:
 	../bin/fixautolink run -L ../lib -L . -f aes_test1.fix
