sudoku: update generator, but it often fails

--- a/_sandbox/Makefile
+++ b/_sandbox/Makefile
@@ -64,6 +64,9 @@ monoid_test1:
 sudoku:
 	../bin/fixautolink run -L ../lib -L . -f sudoku.fix -O separated
 
+build_sudoku:
+	../bin/fixautolink build -L ../lib -L . -f sudoku.fix -g -O minimum
+
 clean:
 	rm -f *.out
 
