--- a/_sandbox/Makefile
+++ b/_sandbox/Makefile
@@ -65,7 +65,7 @@ sudoku:
 	../bin/fixautolink run -L ../lib -L . -f sudoku.fix -O separated
 
 build_sudoku:
-	../bin/fixautolink build -L ../lib -L . -f sudoku.fix -O minimum
+	../bin/fixautolink build -L ../lib -L . -f sudoku.fix
 
 clean:
 	rm -f *.out
