--- a/_sandbox/Makefile
+++ b/_sandbox/Makefile
@@ -58,6 +58,12 @@ algebra_test1:
 monoid_test1:
 	../bin/fixautolink run -L ../lib -L . -f monoid_test1.fix -O separated
 
+xml_test1:
+	../bin/fixautolink run -L ../lib -L . -f xml_test1.fix -O minimum
+
+svg_test1:
+	../bin/fixautolink run -L ../lib -L . -f svg_test1.fix -O minimum
+
 clean:
 	rm -f *.out
 
