--- a/_sandbox/Makefile
+++ b/_sandbox/Makefile
@@ -57,8 +57,8 @@ aes_gcm_test1.out:
 
 gcmvs:
 	../bin/fixautolink run -L ../lib -L . -f aes_gcmvs.fix -O separated
-ecdsa:
-	../bin/fixautolink run -L ../lib -L . -f ecdsa.fix -O separated
+ecdsa_test1:
+	../bin/fixautolink run -L ../lib -L . -f ecdsa_test1.fix -O separated
 tls:
 	../bin/fixautolink run -L ../lib -L . -f tls.fix -O separated
 
