Enhance Crypto (experimental) (#46)
* kari

* impl PBKDF1, PBKDF2

* kari

* add Pkcs7Padding

* kari

* impl CBC

* impl SecureRandom

* sandbox: split cipher.fix

* aes_gcm: wip

* aes_gcm: update (wip)

* aes_gcm: update (wip)

* aes_gcm: add gcm_ae

* aes_gcm: add gcm_ad

* ecdsa: wip

* aes_gcm: bugfix (_shift_right_1)

* aes_gcm: optimize

* aes_gcm: refactor

* aes_gcm: add comments

* ecdsa: update

* aes_gcm: split test

* aes: try to optimize, but not so fast

* aes: use two U64s as state instead of Array U8

* aes_gcm: update

gcm_ae is as ~2x as fast after optimizing AES
_mul is not a bottleneck.
There is no big difference whether you use _mul_bitwise or _clmul_u128_u128_reduce.

* ecdsa: update

* aes_gcm: move to lib/crypto/aes

* hex: add _array_from_string_hex

* aes_gcmvs: wip

* aes_gcmvs: make testcase

* hex: ignore whitespaces in _array_from_string_hex

* ecdsa: update

* ecdsa: impl ECPoint add but not working yet

* bugfix

* secure_random: move to lib, only uses /dev/urandom

* update documents

* ecdsa: impl KeyPair

* bigint: remove BigInt::one since it conflicts with One::one

* ecdsa: impl ECPoint::from_bytes, to_bytes

* ecdsa: add comments

* tls: wip

* ecdsa: add validate_pubkey

* binary: impl Marshal, Unmarshal

* tls: update

* tls: add ServerHello

* tls: kari

* tls: update

* aes_gcm: add test cases

* ecdsa: split ecdsa_test1.fix

* ecdsa: impl 4.1 algorithm (wip)

* ecdsa: add test

* ecdsa: update comment

* ecdsa: fix typo

* ecdsa: add verifying test

* binary: change unmarshal to return Result ErrMsg

* tls: rename to tls13.fix, impl Record Layer (wip)

* sandbox: move crypto files to crypto dir

* sandbox: crypto: update

* sandbox: move aes0.fix to sandbox/crypto

* update document

* tls13: split tls13

* tls13: update test

* tls13: split

* update document

--- a/_sandbox/Makefile
+++ b/_sandbox/Makefile
@@ -4,9 +4,6 @@
 all: fib1.out fib2.out fib3.out fib4.out fib5.out fib6.out echo.out calc.out \
 	png.out ndarray_calc.out
 
-md5_test1.out:
-	../bin/fixautolink build -o $@ -L ../lib -L . -f md5_test1.fix
-
 channel_test1: 
 	../bin/fixautolink run -L ../lib -f channel_test1.fix
 
@@ -40,9 +37,6 @@ state_monad_test2:
 reader_writer_test:
 	../bin/fixautolink run -L ../lib -f reader_writer_test.fix -O separated
 
-aes_test1:
-	../bin/fixautolink run -L ../lib -L . -f aes_test1.fix
-
 lnum:
 	../bin/fixautolink build -L ../lib -f lnum.fix
 
@@ -66,8 +60,7 @@ svg_test1:
 
 clean:
 	rm -f *.out
-
-veryclean: clean
 	rm -f .depend
+	fix clean
 
 -include .depend
