--- a/_sandbox/Makefile
+++ b/_sandbox/Makefile
@@ -1,8 +1,7 @@
 %.out: %.fix
 	../bin/fixautolink build -o $@ -L ../lib -f $<
 
-all: fib1.out fib2.out fib3.out fib4.out fib5.out fib6.out echo.out calc.out \
-	png.out ndarray_calc.out
+all:
 
 channel_test1: 
 	../bin/fixautolink run -L ../lib -f channel_test1.fix
