tls13: add randgen.fix, ecdhe.fix

--- a/_sandbox/crypto/tls13/Makefile
+++ b/_sandbox/crypto/tls13/Makefile
@@ -5,7 +5,7 @@ LIBS = -L ../../../lib -L .
 	$(FIXAUTOLINK) build -o $@ $(LIBS) -f $<
 
 %.run: %.fix
-	$(FIXAUTOLINK) run $(LIBS) -f $<
+	$(FIXAUTOLINK) run $(LIBS) -f $< -O separated
 
 all:
 
