impl send_client_hello

--- a/_sandbox/crypto/tls13/Makefile
+++ b/_sandbox/crypto/tls13/Makefile
@@ -2,7 +2,7 @@ FIXAUTOLINK = ../../../bin/fixautolink
 LIBS = -L ../../../lib -L .
 
 %.out: %.fix
-	$(FIXAUTOLINK) build -o $@ $(LIBS) -f $<
+	$(FIXAUTOLINK) build -o $@ $(LIBS) -f $< -O separated
 
 %.run: %.fix
 	$(FIXAUTOLINK) run $(LIBS) -f $< -O separated
