add asn1_der.fix (wip)

--- a/_sandbox/crypto/Makefile
+++ b/_sandbox/crypto/Makefile
@@ -3,6 +3,8 @@ LIBS = -L ../../lib -L .
 
 %.out: %.fix
 	$(FIXAUTOLINK) build -o $@ $(LIBS) -f $<
+%.run: %.fix
+	$(FIXAUTOLINK) run -o $@ $(LIBS) -f $< -O separated
 
 all:
 
