--- a/_sandbox/crypto/https/Makefile
+++ b/_sandbox/crypto/https/Makefile
@@ -1,6 +1,6 @@
 FIXAUTOLINK = ../../../bin/fixautolink
 FIXAUTOTEST = ../../../bin/fixautotest
-LIBS = -L ../../../lib -L ../tls13 -L .
+LIBS = -L ../../../lib -L ../tls13 -L ../cert -L .
 
 OPT_BUILD = -O separated
 OPT_RUN = -O separated
