--- a/_sandbox/crypto/https/Makefile
+++ b/_sandbox/crypto/https/Makefile
@@ -3,6 +3,6 @@ CRYPTO_DIR = ..
 include $(CRYPTO_DIR)/Makefile.inc
 -include .depend
 
-#all:: sample_https_client.out
-all:: sample_http_client.out
+all:: sample_https_client.out
+#all:: sample_http_client.out
 
