--- a/_sandbox/crypto/Makefile
+++ b/_sandbox/crypto/Makefile
@@ -3,3 +3,6 @@ SUBDIRS = cipher cert tls http
 
 include $(CRYPTO_DIR)/Makefile.inc
 -include .depend
+
+document:
+	$(TOPDIR)/bin/fixdoc -i . -o .local/doc
