cert: update asn1_der test

--- a/_sandbox/crypto/Makefile
+++ b/_sandbox/crypto/Makefile
@@ -1,5 +1,5 @@
 CRYPTO_DIR = .
-SUBDIRS = cipher cert tls http
+SUBDIRS = cipher cert tls https
 
 include $(CRYPTO_DIR)/Makefile.inc
 -include .depend
