--- a/_sandbox/curl/Makefile
+++ b/_sandbox/curl/Makefile
@@ -11,13 +11,16 @@ all:
 libcurl_test.out: libcurl_test.c
 	gcc -o $@ $< -l curl
 
+libcurl_glue.so: libcurl_glue.c
+	gcc $(INCLUDE) $(LIBPATH) -lcurl -shared -fPIC -o $@ $<
+
 test: libcurl_test.out
 	./libcurl_test.out
 
 test2: curl_test1.run
 
 clean:
-	rm -f *.out
+	rm -f *.out *.so
 	rm -f .depend
 	fix clean
 
